fixed z-indexes which solves flickering

--- a/OrangeBox 3.0/css/orangebox.css
+++ b/OrangeBox 3.0/css/orangebox.css
@@ -38,6 +38,7 @@
 	-moz-box-shadow: 0px 0px 8px 2px #222222;
 	line-height:0;
 	display:none;
+	z-index:1003;
 }
 #ob_caption {
 	color:#333;
@@ -79,7 +80,7 @@
 	padding:5px;
 	-webkit-box-shadow: 0px 0px 8px 2px #222222;
 	-moz-box-shadow: 0px 0px 8px 2px #222222;
-	z-index:1003;
+	z-index:1002;
 }
 #ob_error {
 	text-align:center;
